--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,12 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.*",
+                "input": "node_modules/@shoelace-style/shoelace/dist",
+                "output": "/assets/shoelace"
+            }
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
